# my-ai-assistant

./: .dockerignore  .gitignore  AZURE_DEPLOYMENT.md  DEPLOYMENT_ALTERNATIVES.md  Dockerfile  LICENSE  README.md  app.py  azure-app-service.yaml  docker-compose.yml  pyproject.toml  requirements.txt  startup.sh
.github/workflows/: azure-webapps-python.yml  main_my-ai-assistant.yml
.streamlit/: config.toml
pages/: 1_📊_Dashboard.py  2_💬_Chat.py
services/: claude_service.py  supabase_client.py  ynab_service.py
utils/: auth.py  health.py
